--- a/UI/raw/loadDialogWindow.ui
+++ b/UI/raw/loadDialogWindow.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>loadDialogWindow</class>
- <widget class="QDialog" name="loadDialogWindow">
+ <class>LoadDialogWindow</class>
+ <widget class="QDialog" name="LoadDialogWindow">
   <property name="geometry">
    <rect>
     <x>0</x>
@@ -30,7 +30,7 @@
       </widget>
      </item>
      <item>
-      <layout class="QHBoxLayout" name="horizontalLayout">
+      <layout class="QHBoxLayout" name="loadHorizontalLayout">
        <property name="spacing">
         <number>0</number>
        </property>
@@ -38,7 +38,7 @@
         <widget class="QLineEdit" name="pathInput"/>
        </item>
        <item>
-        <widget class="QDialogButtonBox" name="browswButton">
+        <widget class="QDialogButtonBox" name="browseButton">
          <property name="maximumSize">
           <size>
            <width>80</width>
